 06/22/2002 Al Riddoch <alriddoch@zepler.org>,
    -Removed "using namespace std" from header.
 06/11/2002 Ron Steinke <rsteinke@w-link.net>,
    -Added a timeout version of the tcp_socket_stream
     constructor, which wraps the timeout version
     of open()
 06/11/2002 Ron Steinke <rsteinke@w-link.net>,
    -Added an optional "milliseconds" argument to
     tcp_socket_stream::is_ready(), to take advantage
     of the timeout in select()
 06/11/2002 Ron Steinke <rsteinke@w-link.net>,
    -Modified getSocket() so you can poll on the writability
     of a tcp_socket_stream during a nonblocking connect,
     instead of calling is_ready() in a timeout. You still
     have to call is_ready() when the poll returns.
 06/11/2002 Ron Steinke <rsteinke@w-link.net>,
    -Fixed many bugs in nonblocking tcp socket connect code
 2002-06-10 Al Riddoch <alriddoch@zepler.org>
    -Add generated rpm spec and sort out interface versioning. Install docs.
 05/27/2002 Michael Koch <konqueror@gmx.de>
    -Add support for FreeBSD.
 05/20/2002 Ron Steinke <rsteinke@w-link.net>,
            Malcolm Walker <malcolm@worldforge.org>
    -Add code to support noblocking connect for TCP socket streams.
     Bumped version to 0.2.3.
 04/08/2002 Malcolm Walker <malcolm@worldforge.org>, 
            Martin Pollard <xmp@blueyonder.co.uk>
    -Moved code out of skstream.h and into skstream.cpp for
     basic_socket_stream constructors and methods.
    -Renamed CHANGELOG to CHANGELOG.FreeSockets to stop filename clash on
     lame filesystems
    -Added MS Visual C++ project files to VisualC directory.
 03/04/2002 Dan Tomalesky <grim@xynesis.com>
    -Added $ACLOCAL_FLAGS to aclocal call in autogen.sh
 03/02/2002 Dan Tomalesky <grim@xynesis.com>
    -Updated Makefile.am to have the various EXTRA_DIST stuff needed in the
     tar ball.
    -Fixed the includes for the tests so that they aren't installed when doing
     make install, but are in the dist file.